# second-brain

./: .env.example  .gitignore  IOS_IMPORT_GUIDE.md  LICENSE  README.md  SUMMARY_GENERATION_FIX.md  XPService.cs  build-mac.sh  docker-compose.yml  generate_certs.sh  package.json  pnpm-lock.yaml  requirements.txt
.cursor/rules/: 01-project-overview.mdc  02-frontend-architecture.mdc  03-backend-architecture.mdc  04-ai-integration.mdc  05-theme-system.mdc  06-database-structure.mdc  07-state-management.mdc  08-authentication-flow.mdc  09-implementation-quirks.mdc  10-dashboard-stats-system.mdc  11-dashboard-context-handlers.mdc  11-dashboard-context.handlers.mdc  12-dashboard-visualizations.mdc  13-ticktick-integration.mdc
.github/workflows/: backend-tests.yml  dotnet-desktop.yml  frontend-tests.yml  macapp-tests.yml  npm-grunt.yml  python-api.yml  semgrep.yml
SecondBrain.Data/Migrations/: 20250426162706_UpdateUserIntegrationCredentialUserIdColumn.cs
SecondBrain.Tests/Services/: TokenServiceTests.cs
SecondBrainDatabase/: SecondBrainDatabase.sqlproj
ai_service/: requirements.txt
backend/: .dockerignore  .gitignore  Dockerfile  SecondBrain.sln  publish-mac.sh  research-agent-architecture.md  research-agent-comparison.md  research-agent-summary.md
backend/SecondBrain.Agent/: .env.example  README.md  SETUP_SUCCESS.md  pyproject.toml  run_server.py  test_agent_validation.py  test_llm_services.py  test_search_infrastructure.py
backend/SecondBrain.Agent/app/: __init__.py  main.py
backend/SecondBrain.Agent/app/agents/: __init__.py  agent_factory.py  agent_registry.py  analysis_agent.py  base_agent.py  creative_agent.py  research_agent.py  summarization_agent.py
backend/SecondBrain.Agent/app/api/: __init__.py
backend/SecondBrain.Agent/app/api/routes/: agent.py  health.py
backend/SecondBrain.Agent/app/config/: __init__.py  settings.py
backend/SecondBrain.Agent/app/core/: __init__.py  interfaces.py  models.py
backend/SecondBrain.Agent/app/middleware/: __init__.py  error_handling.py  logging.py
backend/SecondBrain.Agent/app/services/: mock_services.py  tool_manager.py
backend/SecondBrain.Agent/app/services/llm/: __init__.py  anthropic_service.py  base_llm_service.py  gemini_service.py  grok_service.py  llm_factory.py  ollama_service.py  openai_service.py
backend/SecondBrain.Agent/app/tools/: __init__.py  base_tool.py  search_orchestrator.py
backend/SecondBrain.Agent/app/tools/search_tools/: __init__.py  academic_search.py  news_search.py  web_search.py
backend/SecondBrain.Api/: Program.cs  SecondBrain.Api.csproj  SecondBrain.Api.http  appsettings.Development.json
backend/SecondBrain.Data/: DataContext.cs  SecondBrain.Data.csproj
backend/SecondBrain.PythonApi/: requirements.txt
backend/SecondBrain.Services/: Class1.cs  SecondBrain.Services.csproj
backend/SecondBrain.Tests/: BasicTests.cs  SecondBrain.Tests.csproj  TestBase.cs  UnitTest1.cs
database/: 00_extensions.sql  01_users.sql  02_notes.sql  03_note_embeddings.sql  04_chat.sql  05_indexing_jobs.sql  06_indexes.sql  07_generated_images.sql  08_search_vectors.sql  09_rag_analytics.sql  10_brainstorm.sql  11_message_images.sql  12_agent_rag_enabled.sql  13_postgresql_18_features.sql  13_postgresql_18_features_rollback.sql  14_tool_call_analytics.sql  15_temporal_features.sql  15_temporal_features_rollback.sql  16_add_username_to_users.sql  17_variable_embedding_dimensions.sql  18_indexing_jobs_embedding_fields.sql  19_gemini_context_caches.sql  20_gemini_function_calls.sql  21_grounding_sources.sql  22_grok_features.sql  23_openai_features.sql  24_claude_features.sql  25_ollama_features.sql  26_reranking_provider.sql  27_note_summaries.sql  28_note_summary_preferences.sql  29_note_embeddings_summary.sql  30_summary_jobs.sql  31_pre_tool_text.sql  32_rag_feature_toggles.sql  33_token_usage_tracking.sql  34_database_optimizations.sql  35_table_partitioning.sql  36_advanced_optimizations.sql  37_note_images.sql  (+20 more)
database/lib/: commands.sh  config.sh  data-copy-functions.sh  db-functions.sh  migration-functions.sh  schema-functions.sh  seed-functions.sh  utils.sh
database/migrations/: RemoveReminderLinksNotesConstraint.sql  RemoveTaskLinksNotesConstraint.sql  (+3 more)
docs/: AGENTS_MODE_IMPLEMENTATION.md  AGENT_CONTEXT_IMPROVEMENTS.md  AGENT_ORCHESTRATION_ENHANCEMENTS.md  ANTHROPIC_SDK_FEATURES_IMPLEMENTATION.md  BACKEND_PERFORMANCE_GUIDE.md  CODE_CLEANUP_2025_12.md  CQRS_PERFORMANCE_REPORT.md  FRONTEND_PERFORMANCE_GUIDE.md  FRONTEND_TEMPORAL_UI_REDESIGN.md  GEMINI_SDK_FEATURES_IMPLEMENTATION.md  GROK_XAI_SDK_FEATURES_IMPLEMENTATION.md  NOTE_SUMMARY_FEATURE.md  NOTE_VERSION_SOURCE_ARCHITECTURE.md  OLLAMASHARP_SDK_FEATURES_IMPLEMENTATION.md  OPENAI_SDK_FEATURES_IMPLEMENTATION.md  RAG_TUNING_GUIDE.md  STREAMING_REDESIGN_PLAN.md  STREAMING_REFACTOR_PLAN.md  ios-notes-sync-guide.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  copy-pdf-worker.js  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src-tauri/: .gitignore  .taurignore  Cargo.toml  Info.plist  entitlements.plist  generate-icons.sh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/resources/: .gitignore
frontend/src-tauri/src/: commands.rs  config.rs  database.rs  diagnostics.rs  lib.rs  port_utils.rs  secrets.rs  startup.rs
frontend/src-tauri/tests/: database_integration.rs  secrets_integration.rs
frontend/src-tauri/tests/common/: mod.rs
public/: notification-worker.js
scripts/: build-mac.sh  bundle-postgresql.sh  generate_certs.sh
(+2041 files in other folders)
